--- a/onfido/Pipfile
+++ b/onfido/Pipfile
@@ -16,4 +16,9 @@ gunicorn = "==19.5.0"
 flask = "==0.12.1"
 requests = "*"
 raven = {extras = ["flask"]}
+simplejson = "*"
+sqlalchemy = "*"
+pprint = "*"
+pipetools = "*"
+responses = "*"
 python-json-logger = "*"
