--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,17 @@ jobs:
                 paths:
                     - integration_name
 
+    set_integration_bvd:
+        docker:
+            - image: circleci/python
+        steps:
+            - run: mkdir -p workspace
+            - run: echo bvd > workspace/integration_name
+            - persist_to_workspace:
+                root: workspace
+                paths:
+                    - integration_name
+
     build:
         docker:
             - image: passfort/python-builder
@@ -186,6 +197,17 @@ workflows:
             - build:
                 requires:
                   - set_integration_onfido
+            - *unit
+            - *e2e
+            - *deploy_staging
+            - *deploy_production
+
+    bvd:
+        jobs:
+            - set_integration_bvd
+            - build:
+                requires:
+                  - set_integration_bvd
             - *unit
             - *e2e
             - *deploy_staging
