--- a/bvd/package.json
+++ b/bvd/package.json
@@ -3,6 +3,6 @@
   "license": "Private",
   "scripts": {
     "unit": "pipenv run python -m unittest discover .",
-    "e2e": "pipenv run python -m unittest e2e.e2e"
+    "e2e": "pipenv run coverage run --source=python -m unittest e2e.e2e"
   }
 }
