add a script to measure e2e tests coverage

--- a/onfido/package.json
+++ b/onfido/package.json
@@ -3,7 +3,8 @@
   "license": "Private",
   "scripts": {
     "unit": "pipenv run python -m unittest discover .",
-    "e2e": "pipenv run python -m unittest e2e.e2e"
+    "e2e": "pipenv run python -m unittest e2e.e2e",
+    "coverage": "pipenv run coverage run --omit='e2e/*','**/test_*' --source . main.py"
   },
   "dependencies": {
   }
