--- a/onfido/Pipfile
+++ b/onfido/Pipfile
@@ -1,17 +1,12 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 
-
 [dev-packages]
-
 mypy = "==0.511"
 neovim = "*"
 
-
 [packages]
-
 gunicorn = "==19.5.0"
 flask = "==0.12.1"
 requests = "*"
@@ -22,3 +17,4 @@ pprint = "*"
 pipetools = "*"
 responses = "*"
 python-json-logger = "*"
+coverage = "*"
