send coverage to codecov
add worldcheck

add coverage modules to worldcheck

add coverage script to worldcheck container

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -25,6 +25,7 @@ RUN mkdir /srv/logs/ && \
 
 COPY main.py /src
 COPY app /src/app
+COPY e2e /src/e2e
 COPY *.postman_collection.json /src
 
 # Ports.
