--- a/onfido/package.json
+++ b/onfido/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "unit": "pipenv run python -m unittest discover .",
     "e2e": "pipenv run python -m unittest e2e.e2e",
-    "coverage": "pipenv run coverage run --omit='e2e/*','**/test_*' --source . main.py"
+    "coverage": "./coverage && yarn run coverage:upload",
+    "coverage:server": "pipenv run coverage run --omit='e2e/*','**/test_*' --source . main.py",
+    "coverage:upload": "pipenv run codecov -F onfido -X search -f coverage.xml"
   },
   "dependencies": {
   }
