--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,8 +70,14 @@ aliases:
             export INTEGRATION=`cat workspace/integration_name`
             export VERSION=`git cat-file -p HEAD | head -c12 | tail -c7`
             gcloud docker -- pull eu.gcr.io/core-gearbox-112418/integrations-$INTEGRATION:$VERSION
-            docker run --name integration -d eu.gcr.io/core-gearbox-112418/integrations-$INTEGRATION:$VERSION
-        - run: docker exec integration yarn run e2e
+            docker run -ti --name integration \
+            -e INTEGRATION=$INTEGRATION \
+            -e CODECOV_TOKEN=$CODECOV_TOKEN \
+            -e VCS_COMMIT_ID=$CIRCLE_SHA1 \
+            -e VCS_BRANCH_NAME=$CIRCLE_BRANCH \
+            -e CI_BUILD_ID=$CIRCLE_BUILD_NUM \
+            eu.gcr.io/core-gearbox-112418/integrations-$INTEGRATION:$VERSION \
+            yarn run coverage
 
     - &deploy_staging_common
       docker:
