--- a/worldcheck/Pipfile
+++ b/worldcheck/Pipfile
@@ -6,14 +6,17 @@ verify_ssl = true
 
 [dev-packages]
 
+mock = "*"
 mypy = "==0.511"
 neovim = "*"
+freezegun = "*"
 
 
 [packages]
 
 gunicorn = "==19.5.0"
-flask = "==0.12.1"
+Flask = "==0.12.1"
 requests = "*"
 raven = {extras = ["flask"]}
 python-json-logger = "*"
+six = "*"
