--- a/worldcheck/deployment.yaml
+++ b/worldcheck/deployment.yaml
@@ -21,6 +21,10 @@ spec:
       containers:
       - name: integrations-worldcheck
         image: {container_uri}
+        resources:
+          requests:
+            cpu: "20m"
+            memory: "128Mi"
         ports:
         - containerPort: 8001
         env:
