--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,21 +23,24 @@ aliases:
             gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
             gcloud config set compute/zone europe-west1-b
             gcloud config set project core-gearbox-112418
+    - &unit
+        steps:
+            - checkout
+            - *attach_to_workspace
+            - *setup_gcp
+            - setup_remote_docker:
+                docker_layer_caching:
+            - run: |
+                export INTEGRATION=`cat workspace/integration_name`
+                export VERSION=`git cat-file -p HEAD | head -c12 | tail -c7`
+                gcloud docker -- pull eu.gcr.io/core-gearbox-112418/integrations-$INTEGRATION:$VERSION
+            - run: |
+                export INTEGRATION=`cat workspace/integration_name`
+                export VERSION=`git cat-file -p HEAD | head -c12 | tail -c7`
+                docker run eu.gcr.io/core-gearbox-112418/integrations-$INTEGRATION:$VERSION yarn run unit
 
 job_aliases:
-    - &unit
-        unit:
-            requires:
-                - build
-    - &unit_worldcheck
-        unit:
-            requires:
-                - build
     - &e2e
-        e2e:
-            requires:
-                - build
-    - &e2e_worldcheck
         e2e:
             requires:
                 - build
@@ -45,7 +48,10 @@ job_aliases:
         deploy_integration_staging:
             requires:
                 - e2e
-                - unit
+                - unit_duedil
+                - unit_onfido
+                - unit_bvd
+                - unit_worldcheck
             filters:
                 branches:
                     only:
@@ -137,24 +143,33 @@ jobs:
                     cd `cat workspace/integration_name`
                     grep Raven src/*.py || exit 1
 
-    unit:
+    unit_duedil:
         docker:
             - image: passfort/python-builder
-        steps:
-            - checkout
-            - *attach_to_workspace
-            - *setup_gcp
-            - setup_remote_docker:
-                docker_layer_caching:
-            - run: |
-                export INTEGRATION=`cat workspace/integration_name`
-                export VERSION=`git cat-file -p HEAD | head -c12 | tail -c7`
-                gcloud docker -- pull eu.gcr.io/core-gearbox-112418/integrations-$INTEGRATION:$VERSION
-            - run: |
-                export INTEGRATION=`cat workspace/integration_name`
-                export VERSION=`git cat-file -p HEAD | head -c12 | tail -c7`
-                docker run eu.gcr.io/core-gearbox-112418/integrations-$INTEGRATION:$VERSION yarn run unit
+        - *unit
+        requires:
+            - build
 
+    unit_onfido:
+        docker:
+            - image: passfort/python-builder
+        - *unit
+        requires:
+            - build
+
+    unit_bvd:
+        docker:
+            - image: passfort/python-builder
+        - *unit
+        requires:
+            - build
+
+    unit_worldcheck:
+        docker:
+            - image: passfort/python-builder
+        - *unit
+        requires:
+            - build
     e2e:
         docker:
             - image: passfort/python-builder
@@ -206,7 +221,7 @@ workflows:
             - build:
                 requires:
                     - set_integration_duedil
-            - *unit
+            - unit_duedil
             - *e2e
             - *deploy_staging
             - *deploy_production
@@ -216,7 +231,7 @@ workflows:
             - build:
                 requires:
                   - set_integration_onfido
-            - *unit
+            - unit_onfido
             - *e2e
             - *deploy_staging
             - *deploy_production
@@ -227,7 +242,7 @@ workflows:
             - build:
                 requires:
                   - set_integration_bvd
-            - *unit
+            - unit_bvd
             - *e2e
             - *deploy_staging
             - *deploy_production
@@ -238,7 +253,7 @@ workflows:
             - build:
                 requires:
                   - set_integration_worldcheck
-            - *unit_worldcheck
-            - *e2e_worldcheck
+            - unit_worldcheck
+            - *e2e
             - *deploy_staging
             - *deploy_production
