add e2e coverage to worldcheck

--- a/base/package.json
+++ b/base/package.json
@@ -4,8 +4,6 @@
   "scripts": {
     "unit": "pipenv run python -m unittest discover .",
     "e2e": "pipenv run python -m unittest e2e.e2e",
-    "coverage": "./coverage",
-    "coverage:server": "pipenv run coverage run --omit='e2e/*','**/test_*' --source . main.py",
-    "coverage:upload": "pipenv run codecov -F base --root base -c $COMMIT"
+    "coverage": "./coverage"
   }
 }
