--- a/duedil/package.json
+++ b/duedil/package.json
@@ -5,6 +5,6 @@
     "unit": "pipenv run python -m unittest discover app",
     "e2e": "pipenv run python -m unittest discover e2e",
     "start": "pipenv run python main.py",
-    "coverage": "pipenv run coverage run --omit='e2e/*','**/test_*' --source . main.py"
+    "coverage": "./coverage"
   }
 }
