--- a/worldcheck/Dockerfile
+++ b/worldcheck/Dockerfile
@@ -28,6 +28,7 @@ RUN yarn && \
     apk del --no-cache git openssh-client
 
 COPY main.py /src
+COPY coverage /src
 COPY app /src/app
 COPY e2e /src/e2e
 COPY mock_data /src/mock_data
