--- a/worldcheck/Dockerfile
+++ b/worldcheck/Dockerfile
@@ -17,10 +17,12 @@ RUN mkdir /srv/logs/ && \
     mkdir -p ~/.ssh  && \
     echo "$git_key" > ~/.ssh/id_rsa && \
     chmod 600 ~/.ssh/id_rsa && \
-    apk add --no-cache yarn openssh-client git && \
-    pipenv run pip install --upgrade wheel && \
-    pipenv install && \
-    yarn && \
+    apk add --no-cache yarn openssh-client git
+
+RUN pipenv run pip install --upgrade wheel
+RUN pipenv install
+
+RUN yarn && \
     apk del --no-cache git openssh-client
 
 COPY main.py /src
