Lock pipenv version

--- a/worldcheck/Dockerfile
+++ b/worldcheck/Dockerfile
@@ -15,7 +15,7 @@ COPY Pipfile Pipfile.lock package.json yarn.lock /src/
 RUN env
 
 RUN mkdir /srv/logs/ && \
-    pip install pipenv && \
+    pip install pipenv==2018.5.18 && \
     mkdir -p ~/.ssh  && \
     echo "$git_key" > ~/.ssh/id_rsa && \
     chmod 600 ~/.ssh/id_rsa && \
