--- a/worldcheck/Pipfile
+++ b/worldcheck/Pipfile
@@ -15,6 +15,7 @@ Flask = "==0.12.1"
 schematics = "*"
 requests = "*"
 raven = {extras = ["flask"]}
+pycountry="*"
 python-json-logger = "*"
 swagger-client = {git = "git@github.com:PassFort/python-worldcheck-client.git@997ffa71befba2e176be87f13dac33189be57090", editable=true}
 coverage = "*"
